--- a/.github/workflows/publish-image.yml
+++ b/.github/workflows/publish-image.yml
@@ -22,7 +22,7 @@ jobs:
           images: ${{env.registry}}/${{github.repository}}
           tags: |
             type=semver,pattern={{version}}
-            type=edge
+            type=ref,event=pr
             type=schedule,pattern=nightly
       - name: docker build
         uses: docker/build-push-action@v2
