--- a/.github/release.yml
+++ b/.github/release.yml
@@ -1,6 +1,8 @@
 changelog:
   categories:
     - title: Bug Fixes
-      labels: bug
+      labels:
+        - bug
     - title: Enhancements
-      labels: enhancement
+      labels:
+        - enhancement
