--- a/.github/workflows/publish-image.yml
+++ b/.github/workflows/publish-image.yml
@@ -1,8 +1,15 @@
 name: publish image
 on:
   workflow_call:
-env:
-  registry: ghcr.io
+    secrets:
+      registry:
+        required: true
+      repository:
+        required: true
+      username:
+        required: true
+      password:
+        required: true
 jobs:
   job:
     runs-on: ubuntu-latest
@@ -12,14 +19,14 @@ jobs:
       - name: login to the registry
         uses: docker/login-action@v1
         with:
-          registry: ${{env.registry}}
-          username: ${{github.actor}}
-          password: ${{secrets.GITHUB_TOKEN}}
+          registry: ${{secrets.registry}}
+          username: ${{secrets.username}}
+          password: ${{secrets.password}}
       - name: extract metadata for docker
         id: meta
         uses: docker/metadata-action@v3
         with:
-          images: ${{env.registry}}/${{github.repository}}
+          images: ${{secrets.registry}}/${{secrets.repository}}
           tags: |
             type=semver,pattern={{version}}
             type=schedule,pattern=nightly
