Rename jobs in test workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,5 +5,5 @@ on:
     branches:
       - main
 jobs:
-  build:
-    uses: ./.github/workflows/test-build.yml
+  binary:
+    uses: ./.github/workflows/test-binary.yml
