--- a/.github/workflows/test-binary.yml
+++ b/.github/workflows/test-binary.yml
@@ -1,8 +1,8 @@
-name: test build
+name: unit test on the binary
 on:
   workflow_call:
 jobs:
-  job:
+  unit-test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
