--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -2,6 +2,8 @@ pull_request_rules:
   - name: Automatic merge on approval
     conditions:
       - "#approved-reviews-by>=0"
+      - check-success=binary / unit-test (Debug)
+      - check-success=binary / unit-test (Release)
     actions:
       merge:
         method: squash
